# Pcon-TNG

./: .gitignore  CMakeLists.txt  README.md  README.sublime-workspace  stest.c  test_sd_card.c
BBB/: Makefile  libMake  libPcon  mastermake  sd.mk  test.mk
BBB-dev/: .cproject  BBB-dev.sublime-workspace  Makefile  Pcon  Pcon.c  Pcon.h  char_fsm.c  char_fsm.h  cmd_fsm.c  cmd_fsm.h  serial_io.c  serial_io.h  typedefs.h
C3-dev/: .cproject  C3-dev.sublime-project  C3-dev.sublime-workspace  Makefile  Pcon.c  Pcon.h  cogA.cogc  common.mk  main.c  main.h  main.side  makefile  simpletext.h
ESP8266/: README.md  getNets.lua  getNetwork.lua  init-old.lua  init.lua  init2.lua  init3.lua  read-post.lua  s1.lua  sensor_post.lua  start-abort.lua  startESP.sh  startup.lua  t1.lua  t2.lua  t3.lua  t4.lua  testconnect.lua  therm02.lua  thermo.lua  tinit.lua  tr.lua  wait.lua  xinit.lua
ESPSDK/: Makefilex  Makefilexx  t1  t1.c
Pcon-BBB/: Makefile  Makefile2  Old-Makefile  PCF8563.h  Pcon.c  Pcon.h  char_fsm.c  char_fsm.h  cmd_fsm.c  cmd_fsm.h  ipc.c  ipc.h  packet.c  packet.h  schedule.c  schedule.h  sd_card.c  sd_card.h  serial_io.c  serial_io.h  serialx.c  typedefs.h  xtypedefs.h
Pcon-C3/: .cproject  FdSerial.c  FdSerial.h  Makefile  Makefile-OLD  Pcon.c  Pcon.h  Pcon.side  Pcon_C3.sublime-project  Pcon_C3.sublime-workspace  common-OLD.mk  common.mk  fds.c  full_duplex_serial_ht_demo.c  hold_make.mk  old_shared.h  packet.c  packet.h  pm.mk  schedule.c  schedule.h  serial_io.c  serial_io.h  shared.h  typedefs.h  xPcon.c
Pcon-D/: README.md  propd.c  propd.h
i5-6600k/: hellow.c  (+2 more)
(+678 files in other folders)
